Test to fix background bounce on mobile

--- a/client/styles.css
+++ b/client/styles.css
@@ -95,7 +95,13 @@ html {
     background: url("https://images.unsplash.com/photo-1497250681960-ef046c08a56e?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D") no-repeat center center fixed;
     margin-left: -2px;
     overflow-x: hidden;
-    width: 100%;
+    /* background-size: cover; */
+    -webkit-background-size: calc(100vw) calc(100vh);
+    -moz-background-size: calc(100vw) calc(100vh);
+    -o-background-size: calc(100vw) calc(100vh);
+    background-size: calc(100vw) calc(100vh);
+    /* width: 100%;
+    height: 100vh; */
     overscroll-behavior: none;
 }
 
